   problem)

 OTHER:

 - make links different if something is already registered (as for medias,
   actions, etc)
 - get rid of problems with ' and "
 - add host groups (one to one or one to many?)
 - add user groups
 - high level Zabbix schema on paper !
 - permissions for all *.php (charts, graphs , hosts, etc etc )
 - add numeric constants to trigger expressions
 - show who is online somewhere (in User config form?)
 - setup demo site

Changes for 1.0beta6:

 - additional colors for graphs (Alexei)
 - in chart3.php: group by <complex expression> changed to group by 1
 (Alexei)
 - added housekeeping procedure for table sessions (Alexei)
 - changed width=\"X%\" to width=X% in *.php (Alexei)
 - Status of a trigger will blink if it was changes during last 60
 seconds (Alexei)
 - Zabbix daemons to update triggers.lastchange when triggers.values 
 is changed (Alexei)
 - added misc/init.d/debian/zabbix-[suckerd|trapperd] (Alexei)
 - removed misc/init.d/debian/zabbix-server (Alexei)
 - send_email() will timeout after 10 seconds (Alexei)
 - DBadd_alarm() renamed to add_alarm() (Alexei)
 - support for SCO OpenServer (Alexei). Thanks to Alexender Kirhenstein.
 - ./configure will correctly define socklen_t (Alexei) 
 - <center> changed to <div align=center> (Alexei)
 - reason of problem in screen IT Services (Alexei) 
 - added frontends.php/helpdesk.php (Alexei)
 - added tables: problems, problems_comments,categories (Alexei)
 - added "...#form" to button Change in form Configuration of Users (Alexei)
 - "Just for information" changed to "Information" (Alexei)
 - fixed ./configure to correctly find zlib (Alexei)
 - housekeeping to delete no more than HousekeepingFrequency*3600 records
 from table history and history_str at once (MySQL only) (Alexei)
 - changed definition of functions.lastvalue to allow NULL (Alexei)
 - added upgrades/dbpatches/1.0beta5_to_1.0beta6/ with patches (Alexei)
 - added misc/init.d/debian/zabbix_agent (Alexei)

Changes for 1.0beta5:
