@@ -176,7 +176,7 @@ CREATE TABLE functions (
   triggerid		int(4)		DEFAULT '0' NOT NULL,
   lastvalue		varchar(255),
   function		varchar(10)	DEFAULT '' NOT NULL,
-  parameter		int(4)		DEFAULT '0' NOT NULL,
+  parameter		varchar(255)	DEFAULT '0' NOT NULL,
   PRIMARY KEY (functionid),
   KEY triggerid (triggerid),
   KEY itemidfunctionparameter (itemid,function,parameter)
